several changes on syntax

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -75,7 +75,7 @@ nav
 			color: #ffffff
 			text-decoration: none
 			&::after
-				width: 100%;
+				width: 100%
 				left: 0
 
 	
@@ -438,7 +438,7 @@ nav
 				transition: 0.25s cubic-bezier(0.6, 0.04, 0.98, 0.335) all
 			&:hover
 				&::after
-					width: 100%;
+					width: 100%
 					left: 0
 
 
